# llm-whisperer-python-client

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample.env  tox.ini
.github/workflows/: ci_test.yaml  main.yml
src/llmwhisperer/: __init__.py  client.py
src/unstract/llmwhisperer/: __init__.py  client.py  client_temp.py  client_v2.py  utils.py
tests/: client_test.py  client_test_v2.py  client_v2_test.py  conftest.py  sample.env  test_client.py  utils_test.py
tests/integration/: client_test.py  client_v2_test.py  conftest.py
tests/test_data/: test.json
tests/test_data/expected/: credit_card.low_cost.layout_preserving.txt  credit_card.low_cost.text.txt  credit_card.native_text.layout_preserving.txt  credit_card.native_text.text.txt  credit_card.ocr.line-printer.txt  handwritten-form.form.layout_preserving.txt  handwritten-form.form.text.txt  handwritten-form.ocr.line-printer.txt  handwritten-form.text.text.txt  restaurant_invoice_photo.high_quality.layout_preserving.txt  restaurant_invoice_photo.high_quality.text.txt  restaurant_invoice_photo.ocr.line-printer.txt  restaurant_invoice_photo.ocr.text.txt  utf_8_chars.ocr.line-printer.txt
tests/unit/: client_v2_test.py
